// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplaceStatusSection should match a snapshot when isListed equal to false 1`] = `
<FormSection>
  <FormHeading>
    Images
  </FormHeading>
  <FormSubHeading>
    The icon field will appear as the main brand representation of your app in marketplace listings and installed apps pages. You can also select a minimum of one and up to five screenshots of your application, that will appear in a carousel in the details view of your app listing.
  </FormSubHeading>
  <GridFourCol>
    <GridFourColItem>
      <div
        className="control"
      >
        <label
          className="label"
        >
          Icon 
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1}
          dataTest="submit-app-icon"
          id="iconImageUrl"
          labelText="Upload Image"
          name="iconImageUrl"
          required={false}
          resizeDimensions={
            Object {
              "height": 96,
              "width": 96,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Feature Image 
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={2.22972972972973}
          dataTest="submit-app-screenshot1"
          id="screen1ImageUrl"
          labelText="Upload Image"
          name="screen1ImageUrl"
          required={false}
          resizeDimensions={
            Object {
              "height": 222,
              "width": 495,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 1
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot2"
          id="screen2ImageUrl"
          labelText="Upload Image"
          name="screen2ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 2
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot3"
          id="screen3ImageUrl"
          labelText="Upload Image"
          name="screen3ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 3
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot4"
          id="screen4ImageUrl"
          labelText="Upload Image"
          name="screen4ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 4
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot5"
          id="screen5ImageUrl"
          labelText="Upload Image"
          name="screen5ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
  </GridFourCol>
</FormSection>
`;

exports[`MarketplaceStatusSection should match a snapshot when isListed equal to true 1`] = `
<FormSection>
  <FormHeading>
    Images
  </FormHeading>
  <FormSubHeading>
    The icon field will appear as the main brand representation of your app in marketplace listings and installed apps pages. You can also select a minimum of one and up to five screenshots of your application, that will appear in a carousel in the details view of your app listing.
  </FormSubHeading>
  <GridFourCol>
    <GridFourColItem>
      <div
        className="control"
      >
        <label
          className="label"
        >
          Icon 
          *
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1}
          dataTest="submit-app-icon"
          id="iconImageUrl"
          labelText="Upload Image"
          name="iconImageUrl"
          required={true}
          resizeDimensions={
            Object {
              "height": 96,
              "width": 96,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Feature Image 
          *
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={2.22972972972973}
          dataTest="submit-app-screenshot1"
          id="screen1ImageUrl"
          labelText="Upload Image"
          name="screen1ImageUrl"
          required={true}
          resizeDimensions={
            Object {
              "height": 222,
              "width": 495,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 1
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot2"
          id="screen2ImageUrl"
          labelText="Upload Image"
          name="screen2ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 2
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot3"
          id="screen3ImageUrl"
          labelText="Upload Image"
          name="screen3ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 3
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot4"
          id="screen4ImageUrl"
          labelText="Upload Image"
          name="screen4ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
    <GridFourColItem>
      <div
        className="control mb-4"
      >
        <label
          className="label"
        >
          Screenshot 4
        </label>
        <ImageCropperWithInput
          allowClear={true}
          aspect={1.3085339168490153}
          dataTest="submit-app-screenshot5"
          id="screen5ImageUrl"
          labelText="Upload Image"
          name="screen5ImageUrl"
          resizeDimensions={
            Object {
              "height": 457,
              "width": 598,
            }
          }
        />
      </div>
    </GridFourColItem>
  </GridFourCol>
</FormSection>
`;
